--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 *.iml
 *.xml
 *.xml
+machinelearning/Coursera-ML-AndrewNg/matlab/machine-learning-ex1/ex1/octave-workspace
+machinelearning/Coursera-ML-AndrewNg/matlab/octave-workspace
+machinelearning/Coursera-ML-AndrewNg/matlab/machine-learning-ex1/ex1/token.mat
